// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form Example 1`] = `
<div style="display: flex; flex-direction: column; gap: var(--ds-size-6);">
  <fieldset
    aria-labelledby="<removed>"
    id="<removed>"
  >
    <div style="display: flex; width: 100%; justify-content: space-between; align-items: flex-end; margin-block-end: var(--ds-size-4);">
      <legend
        data-weight="medium"
        id="<removed>"
      >
        <h4>
          Skjema
        </h4>
      </legend>
      <div
        data-color="accent"
        style="width: 30%;"
        tabindex="-1"
      >
        <span>
          Skjemafremgang
        </span>
        <span>
          Side 1 av 7
        </span>
        <u-progress
          aria-busy="false"
          aria-hidden="true"
          aria-label="..."
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="14"
          id="<removed>"
          max="7"
          role="progressbar"
          style="--percentage: 14%;"
          value="1"
        >
          <template shadowrootmode="open">
            <slot>
            </slot>
            <style>
              :host(:not([hidden])) { box-sizing: border-box; border: 1px solid; display: inline-block; height: .5em; width: 10em; overflow: hidden }
:host::before { content: ''; display: block; height: 100%; background: currentColor; width: var(--percentage, 0%); transition: width .2s }
:host(:not([value])) { background: linear-gradient(90deg,currentColor 25%, transparent 50%, currentColor 75%) 50%/400% }
@media (prefers-reduced-motion: no-preference) { :host { animation: indeterminate 2s linear infinite }  }
@keyframes indeterminate { from { background-position-x: 100% } to { background-position-x: 0 } }
            </style>
          </template>
        </u-progress>
      </div>
    </div>
    <table data-border="true">
      <thead>
        <tr>
          <th>
            Påstander
          </th>
          <th>
            Uenig
          </th>
          <th>
            Nøytral
          </th>
          <th>
            Enig
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Første påstand
          </td>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-invalid="false"
                aria-label="Uenig i påstand Første påstand"
                id="<removed>"
                name="rankings.Første påstand"
                type="radio"
                value="Uenig"
              >
            </ds-field>
          </td>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-invalid="false"
                aria-label="Nøytral i påstand Første påstand"
                id="<removed>"
                name="rankings.Første påstand"
                type="radio"
                value="Nøytral"
              >
            </ds-field>
          </td>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-invalid="false"
                aria-label="Enig i påstand Første påstand"
                id="<removed>"
                name="rankings.Første påstand"
                type="radio"
                value="Enig"
              >
            </ds-field>
          </td>
        </tr>
        <tr>
          <td>
            Andre påstand
          </td>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-invalid="false"
                aria-label="Uenig i påstand Andre påstand"
                id="<removed>"
                name="rankings.Andre påstand"
                type="radio"
                value="Uenig"
              >
            </ds-field>
          </td>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-invalid="false"
                aria-label="Nøytral i påstand Andre påstand"
                id="<removed>"
                name="rankings.Andre påstand"
                type="radio"
                value="Nøytral"
              >
            </ds-field>
          </td>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-invalid="false"
                aria-label="Enig i påstand Andre påstand"
                id="<removed>"
                name="rankings.Andre påstand"
                type="radio"
                value="Enig"
              >
            </ds-field>
          </td>
        </tr>
        <tr>
          <td>
            Tredje påstand
          </td>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-invalid="false"
                aria-label="Uenig i påstand Tredje påstand"
                id="<removed>"
                name="rankings.Tredje påstand"
                type="radio"
                value="Uenig"
              >
            </ds-field>
          </td>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-invalid="false"
                aria-label="Nøytral i påstand Tredje påstand"
                id="<removed>"
                name="rankings.Tredje påstand"
                type="radio"
                value="Nøytral"
              >
            </ds-field>
          </td>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-invalid="false"
                aria-label="Enig i påstand Tredje påstand"
                id="<removed>"
                name="rankings.Tredje påstand"
                type="radio"
                value="Enig"
              >
            </ds-field>
          </td>
        </tr>
      </tbody>
    </table>
  </fieldset>
  <div style="display: flex; justify-content: flex-start; gap: var(--ds-size-4);">
    <button
      data-variant="secondary"
      type="button"
    >
      Neste
      <svg
        aria-hidden="true"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewbox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
          fill="currentColor"
        >
        </path>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Percentage 1`] = `
<div>
  <span>
    20%
  </span>
  <u-progress
    aria-busy="false"
    aria-hidden="true"
    aria-label="..."
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    id="<removed>"
    max="10"
    role="progressbar"
    style="--percentage: 20%;"
    value="2"
  >
    <template shadowrootmode="open">
      <slot>
      </slot>
      <style>
        :host(:not([hidden])) { box-sizing: border-box; border: 1px solid; display: inline-block; height: .5em; width: 10em; overflow: hidden }
:host::before { content: ''; display: block; height: 100%; background: currentColor; width: var(--percentage, 0%); transition: width .2s }
:host(:not([value])) { background: linear-gradient(90deg,currentColor 25%, transparent 50%, currentColor 75%) 50%/400% }
@media (prefers-reduced-motion: no-preference) { :host { animation: indeterminate 2s linear infinite }  }
@keyframes indeterminate { from { background-position-x: 100% } to { background-position-x: 0 } }
      </style>
    </template>
  </u-progress>
</div>
`;

exports[`Preview 1`] = `
<div>
  <span>
    Steg 3 av 10
  </span>
  <u-progress
    aria-busy="false"
    aria-hidden="true"
    aria-label="..."
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    id="<removed>"
    max="10"
    role="progressbar"
    style="--percentage: 30%;"
    value="3"
  >
    <template shadowrootmode="open">
      <slot>
      </slot>
      <style>
        :host(:not([hidden])) { box-sizing: border-box; border: 1px solid; display: inline-block; height: .5em; width: 10em; overflow: hidden }
:host::before { content: ''; display: block; height: 100%; background: currentColor; width: var(--percentage, 0%); transition: width .2s }
:host(:not([value])) { background: linear-gradient(90deg,currentColor 25%, transparent 50%, currentColor 75%) 50%/400% }
@media (prefers-reduced-motion: no-preference) { :host { animation: indeterminate 2s linear infinite }  }
@keyframes indeterminate { from { background-position-x: 100% } to { background-position-x: 0 } }
      </style>
    </template>
  </u-progress>
</div>
`;
